--- a/index.html
+++ b/index.html
@@ -4,12 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Apple</title>
+    <title>Iphone 13 Pro</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul id="navbar">
+                <li id="logo">
+                    <a href="#">
+                        <img src="img/logo_apple.svg" alt="apple">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Loja</a>
+                </li>
+                <li>
+                    <a href="#">Mac</a>
+                </li>
+                <li>
+                    <a href="#">iPad</a>
+                </li>
+                <li>
+                    <a href="#">iPhone</a>
+                </li>
+                <li>
+                    <a href="#">Watch</a>
+                </li>
+                <li>
+                    <a href="#">AirPods</a>
+                </li>
+                <li>
+                    <a href="#">Só na Apple</a>
+                </li>
+                <li>
+                    <a href="#">Acessórios</a>
+                </li>
+                <li>
+                    <a href="#">Suporte</a>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
 
 </body>
 
