Finalizado HTML Menu

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 
             </ul>
         </nav>
+        <div id="bottom-header">
+            <div id="bottom-header-inner">
+                <h3>iPhone 13 Pro</h3>
+                <a href="#">Visão Geral</a>
+                <a href="#">Mudar para o iPhone</a>
+                <a href="#">Especificações</a>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+        </div>
     </header>
 
 </body>
