--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
         <div id="bottom-header">
             <div id="bottom-header-inner">
                 <h3>iPhone 13 Pro</h3>
-                <a href="#">Visão Geral</a>
-                <a href="#">Mudar para o iPhone</a>
-                <a href="#">Especificações</a>
-                <a href="#" class="btn">Comprar</a>
+                <div id="bottom-header-links">
+
+                    <a href="#">Visão Geral</a>
+                    <a href="#">Mudar para o iPhone</a>
+                    <a href="#">Especificações</a>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
             </div>
         </div>
     </header>
